CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

find_package(gazebo REQUIRED)

FIND_PACKAGE(Chrono COMPONENTS Vehicle CONFIG)

#message(STATUS "CHRONOVEHICLE_INCLUDES ${CHRONO_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES(SYSTEM ${CHRONO_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS}) # "${CHRONOENGINE_INCLUDES}/unit_VEHICLE")

link_directories(${GAZEBO_LIBRARY_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")

add_library(gazonoVehicle SHARED gazonoVehicle.cc)

TARGET_LINK_LIBRARIES(gazonoVehicle ${CHRONO_LIBRARIES} ${GAZEBO_LIBRARIES}) # ${CHRONOVEHICLE_LIBRARIES})
